[package]
name = "chameleon"
version = "0.1.0"
edition = "2021"
description = "A simple and fast media processing server"
readme = "README.md"
repository = "https://github.com/lingfromSh/chameleon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.138"
config = "0.13.1"