[package]
name = "chameleon"
version = "0.1.0"
edition = "2021"
description = "A simple and fast media processing server"
readme = "README.md"
repository = "https://github.com/lingfromSh/chameleon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.1"
serde = "1.0.138"
config = "0.13.1"
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-actix-rustls", "macros"]}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
image = "0.24.2"